Add hash table persistence tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ add_executable(CHashTable_tests
         tests/hash_table/test_hash_table_resize.c
         tests/hash_table/test_hash_table_delete.c
         tests/hash_table/test_hash_table_foreach.c
+        tests/hash_table/test_hash_table_persistence.c
         tests/hash_table/test_hash_table_utils.c
         tests/interactive_mode/test_argument_parser.c
         tests/test_main.c)
